more of UnaryOperatorSequence